add new navbar here

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Git hub versioning </title>
 </head>
 <body>
+
+    <nav><ul>
+        <li>Accueil</li>
+        <li>A propos</li>
+        <li>Contact</li>
+    </ul></nav>
     <h2>Version 2 du projet</h2>
 
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit explicabo, quam voluptatum
